--- a/templates/public/tansik.html
+++ b/templates/public/tansik.html
@@ -16,9 +16,10 @@
 </head>
 <body>
     <h1>Tansiky</h1>
-    <form action="/tansiky" method="post">
-        <input type="text" name="grade" id="grade">
-        <input type="submit" value="Tansiky" name="" id="">
-    </form>
+<form method=post>
+    {{ form.tansik }}
+  <input type=submit value=Tansiky>
+</form>
+
 </body>
 </html>
